--- a/css/registration.css
+++ b/css/registration.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("../assets/images/registration.jpg");
+    background-image: url("/assets/images/registration.jpg");
     font-family: Arial, sans-serif;
     background-color: #f0f0f0;
     background-size: cover; 
