--- a/css/mainmenu.css
+++ b/css/mainmenu.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("../assets/images/mainmenubg.jpg");
+    background-image: url("/assets/images/mainmenubg.jpg");
     background-color: #f0f0f0;
     background-size: cover;
     background-repeat: no-repeat;
@@ -16,7 +16,7 @@ body::before {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;    
+    width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
     z-index: -1;
