--- a/css/contact.css
+++ b/css/contact.css
@@ -1,7 +1,7 @@
 
  /* Absolute positioning for background image */
   body {
-    background-image: url("/assets/images/registration.jpg");
+    background-image: url("../assets/images/registration.jpg");
     background-color: #f0f0f0;
     background-size: cover; 
     background-repeat: no-repeat; 
