--- a/css/mainmenu.css
+++ b/css/mainmenu.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("../assets/images/mainmenubg.jpg");
+    background-image: url("./assets/images/mainmenubg.jpg");
     background-color: #f0f0f0;
     background-size: cover;
     background-repeat: no-repeat;
