--- a/css/confirm_booking.css
+++ b/css/confirm_booking.css
@@ -15,7 +15,7 @@ th, td {
 tr:nth-child(even) {
     background-color: #f2f2f2;
 }
-/* Header styles */
+/* Header Styles */
 header {
     font-style: normal;
     display: flex;
@@ -46,35 +46,38 @@ header {
     margin: 0;
     color: #fff;
     font-size: 20px;
-    justify-content: left;
-    width: 300px;
-    font-family: 'Poppins', sans-serif; /* Use the Poppins font */
+    /* justify-content: left; Remove justify-content */
+    /* width: 300px; Remove fixed width */
+    font-family: 'Montserrat', sans-serif; /* Use the Montserrat font */
     font-weight: 500; /* Adjust font weight as needed */
+    margin-right: 20px; /* Add margin to create space between logo and title */
 }
-
-nav {
+  
+  nav {
     max-width: 1400px; /* Adjust the max-width value as needed */
     width: 100%;
-    padding: 2.6rem 1.5rem; /* Increase the padding to add more space */
+    padding: 2rem 1.5rem; /* Increase the padding to add more space */
     display: flex;
     align-items: center;
     justify-content: space-between;
-}
-
-nav ul {
+    font-family: 'Montserrat', sans-serif; /* Use the Montserrat font */
+    font-weight: 500; /* Adjust font weight as needed */
+  }
+  
+  nav ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     font-size: 16px; /* Adjust the font size as needed */
     display: flex;
     margin-left: auto; /* Align the nav ul content to the right */
-}
-
-nav ul li:not(:last-child) {
+  }
+  
+  nav ul li:not(:last-child) {
     margin-right: 5px; /* Add margin between list items */
-}
-
-nav ul li a {
+  }
+  
+  nav ul li a {
     font-size: 20px;
     color: white;
     text-decoration: none;
@@ -82,14 +85,15 @@ nav ul li a {
     padding: 10px 20px;
     border-radius: 5px;
     transition: background-color 0.3s;
-}
-
-nav ul li a:hover {
+  }
+  
+  nav ul li a:hover {
     background-color: rgba(255, 255, 255, 0.1);
-}
-
-/* Add this to style the dropdown button */
-nav .dropdown .dropbtn {
+    cursor: pointer;
+  }
+  
+  /* Add this to style the dropdown button */
+  nav .dropdown .dropbtn {
     color: #fff;
     text-decoration: none;
     font-weight: bold;
@@ -97,18 +101,18 @@ nav .dropdown .dropbtn {
     border-radius: 5px;
     transition: background-color 0.3s;
     cursor: pointer; /* Change cursor to pointer */
-}
-
-nav .dropdown .dropbtn:hover {
+  }
+  
+  nav .dropdown .dropbtn:hover {
     background-color: rgba(255, 255, 255, 0.1);
-}
-
-.dropdown {
+  }
+  
+  .dropdown {
     position: relative;
     display: inline-block;
-}
-
-.dropbtn {
+  }
+  
+  .dropbtn {
     background-color: transparent;
     color: white;
     padding: 10px 20px;
@@ -117,13 +121,13 @@ nav .dropdown .dropbtn:hover {
     cursor: pointer;
     font-family: Arial, sans-serif;
     transition: background-color 0.3s;
-}
-
-.dropbtn:hover {
+  }
+  
+  .dropbtn:hover {
     background-color: rgba(255, 255, 255, 0.1);
-}
-
-.dropdown-content {
+  }
+  
+  .dropdown-content {
     display: none;
     position: absolute;
     background-color: #333; /* Background color of the dropdown */
@@ -132,37 +136,43 @@ nav .dropdown .dropbtn:hover {
     z-index: 1;
     border-radius: 5px;
     padding: 10px;
-    /* Adjust the height as needed */
-    max-height: 200px; /* Example height */
-    overflow-y: auto; /* Enable vertical scrolling if content exceeds max height */
-}
-
-.dropdown-content a {
+  }
+  
+  .dropdown-content a {
     color: white;
     padding: 10px 0;
     text-decoration: none;
     display: block;
     transition: color 0.3s;
-}
-
-.dropdown-content a:hover {
+  }
+  
+  .dropdown-content a:hover {
     background-color: rgba(255, 255, 255, 0.1);
-}
-
-.dropdown.active .dropdown-content {
+  }
+  
+  .dropdown.active .dropdown-content {
     display: block;
-}
-
-.dropdown-content a.logout {
+  }
+  
+  .dropdown-content a.logout {
     color: red; /* Color for logout link */
-}
-
-/*End of the Header*/
-main {
+  }
+  /* End of Header Styles */
+  main {
     padding: 20px;
-    margin-top: 110px; /* Adjust this value to create space between header and main content */
+    margin-top: 10px; /* Adjust margin-top to move the main content up */
 }
 
+main h2 {
+    padding-left: 500px;
+}
+.passenger-title-container {
+    text-align: left;
+    margin-right: 830px; /* Add margin to align with the left edge of passenger details */
+    font-size: 20px;
+    font-family: 'Montserrat', sans-serif; /* Use the Montserrat font */
+    font-weight: 500; /* Adjust font weight as needed */
+}
 
 /* Button styles */
 input[type="submit"] {
@@ -228,17 +238,26 @@ input[type="date"]:focus {
 input[type="date"]::placeholder {
     color: #999; /* Placeholder text color */
 }
-/* Footer styles */
-footer {
-    background-color: #333;
-    color: #fff;
-    padding: 20px 0;
-    text-align: center;
+input[type="number"],
+input[type="text"],
+input[type="password"] {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
 }
 
-.payment-methods {
-    max-width: 1200px;
-    margin: 0 auto;
+
+.payment-method {
+    text-align: center;
+    padding: 20px;
+}
+
+/* Payment logo */
+.payment-logo {
+    width: 100px;
+    margin-bottom: 20px;
 }
 
 .payment-methods h3 {
@@ -300,6 +319,19 @@ footer {
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
+.popup {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 9999;
+    background-color: #fff;
+    border-radius: 5px;
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
 
 /* Close icon styles */
 .close-icon {
@@ -308,12 +340,12 @@ footer {
     right: 5px;
     font-size: 20px;
     cursor: pointer;
-    color: #888; /* Close icon color */
+    color: #888;
 }
 
 /* Close icon hover styles */
 .close-icon:hover {
-    color: #000; /* Change close icon color on hover */
+    color: #000;
 }
 
 body {
@@ -345,6 +377,7 @@ input[type="number"] {
     border-radius: 5px;
     border: 1px solid #ccc;
 }
+/* Button styles */
 button {
     background-color: #16a085;
     color: #fff;
@@ -353,6 +386,7 @@ button {
     border-radius: 5px;
     cursor: pointer;
 }
+
 button:hover {
     background-color: #1abc9c;
 }
@@ -413,6 +447,7 @@ input[type="text"], input[type="password"] {
     border-radius: 5px;
     border: 1px solid #ccc;
 }
+/* Button styles */
 button {
     background-color: #16a085;
     color: #fff;
@@ -421,6 +456,7 @@ button {
     border-radius: 5px;
     cursor: pointer;
 }
+
 button:hover {
     background-color: #1abc9c;
 }
@@ -484,6 +520,7 @@ input[type="text"], input[type="password"] {
 input[type="checkbox"] {
     margin-right: 10px;
 }
+/* Button styles */
 button {
     background-color: #16a085;
     color: #fff;
@@ -492,6 +529,7 @@ button {
     border-radius: 5px;
     cursor: pointer;
 }
+
 button:hover {
     background-color: #1abc9c;
 }
