--- a/css/contact.css
+++ b/css/contact.css
@@ -240,17 +240,6 @@ footer {
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.3s);
     background-color: rgba(255, 255, 255, 0);
 } 
-footer {
-    position: fixed;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 85%;
-    color: #fff;
-    padding: 20px;
-    text-align: center;
-    background-color: rgba(255, 255, 255, 0);
-}
 /* Notification style */
 .notification {
     text-align: center;
@@ -267,4 +256,15 @@ footer {
 @keyframes fadein {
     from { opacity: 0; }
     to   { opacity: 1; }
+}
+footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 2;
 }
