--- a/css/admin_dasboard.css
+++ b/css/admin_dasboard.css
@@ -352,3 +352,30 @@ header {
     color: red; /* Color for logout link */
   }
   /*End of the Header*/
+  .modal-seat-map {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 10px;
+}
+
+.seat {
+    width: 50px;
+    height: 50px;
+    background-color: #ddd;
+    text-align: center;
+    line-height: 50px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.seat.selected {
+    background-color: #6c757d;
+    color: white;
+}
+#userContainer {
+  border: 1px solid #ccc;
+  padding: 20px;
+  margin-top: 20px;
+  background-color: #f9f9f9;
+  border-radius: 5px;
+}
