--- a/css/profile.css
+++ b/css/profile.css
@@ -262,16 +262,16 @@ select:focus {
 
 .edit-container-content {
   position: fixed;
-  top: 55%;
+  top: 56%;
   left: 50%;
-  bottom: -369px;
+  bottom: -330px;
   transform: translate(-50%, -50%);
   background-color: #f9f9f9;
   border: 1px solid #ddd;
   border-radius: 10px;
   padding: 20px;
   width: 80%;
-  max-width: 800px;
+  max-width: 790px;
   overflow-y: auto; /* Enable vertical scrolling */
   max-height: calc(100vh - 100px); /* Set max height to fit within viewport */
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.8); /* Add box shadow */
@@ -299,6 +299,8 @@ select:focus {
 .edit-container label {
   display: block;
   margin-bottom: 10px;
+  max-width: 500px;
+  width: 100%;
 }
 
 .edit-container input[type="text"],
