--- a/css/admin_dasboard.css
+++ b/css/admin_dasboard.css
@@ -45,7 +45,7 @@ body{
 .h1-anal {
   font-size: 70px; /* Adjusted for better balance */
   font-family: 'Oswald', sans-serif;
-  color: #333;
+  color: #000000;
   padding: 20px;
   margin: 20px 0;
   text-align: center; /* Center-align the text */
@@ -406,7 +406,7 @@ td.receipt {
 .seat-map-container {
   display: flex;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   flex-direction: column;
 }
 
@@ -424,8 +424,8 @@ td.receipt {
 /* Add this CSS to your existing stylesheet */
 .seat {
   display: inline-block;
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   border-radius: 50px;
   background-color: #c0c0c0; /* Default color */
   text-align: center;
@@ -433,6 +433,7 @@ td.receipt {
   margin: 5px;
   padding-top: 5px;
   cursor: pointer;
+  align-items: center;
 }
 
 .middle-line {
@@ -447,9 +448,7 @@ td.receipt {
 .seat.occupied {
   background-color: #ff6666;
 }
-.seat.selected {
-  background-color: #66ff66;
-}
+
 
 .seat-section {
   display: flex;
